prevent marketitems-list overlap

--- a/src/components/MarketItemCell/MarketItemCell.scss
+++ b/src/components/MarketItemCell/MarketItemCell.scss
@@ -29,6 +29,8 @@
 
 .cell--image {
   object-fit: cover;
+  width: 250px;
+  height: 182px;
 }
 
 .cell--favorite {
